[tool.poetry]
name = "grokking-algorithms"
version = "0.0.1"
description = "samples of Grokking Algorithms book by Aditya Y. Bhargava"
authors = ["veetors <veetor.s@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "grokking_algorithms"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
